--- a/site/_sass/custom/custom.scss
+++ b/site/_sass/custom/custom.scss
@@ -1,5 +1,34 @@
 // Custom styles for autospec documentation
 
+// Fix sidebar to be flush left
+.side-bar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 264px;
+  padding: 1rem;
+  overflow-y: auto;
+  background-color: var(--sidebar-color);
+  border-right: 1px solid var(--border-color);
+
+  @media (max-width: 800px) {
+    position: static;
+    width: 100%;
+    border-right: none;
+    border-bottom: 1px solid var(--border-color);
+  }
+}
+
+// Ensure main content doesn't overlap sidebar
+.main {
+  margin-left: 264px;
+
+  @media (max-width: 800px) {
+    margin-left: 0;
+  }
+}
+
 // Features grid on homepage
 .features-grid {
   display: grid;
